--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <p><em>Electrical and Electronics Engineer.</em><br><em>Programmer Analyst</em></p>
       <br>
       <p>I am a B.Tech Electrical and Electronics Engineering graduate. I have good proficiency in programming languages like Python, C.
-        I am really fascinated in IT industry and programming, and I look forawrd to create a remarkable position in digital world with my knowledge
+        I am really fascinated in IT industry and programming, and I look forward to create a remarkable position in digital world with my knowledge
         and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em>.
       </p>
       <p><strong><em><a href="contact.html" target="_blank">Contact info:</a></em></strong></p>
