--- a/About.html
+++ b/About.html
@@ -86,9 +86,9 @@
 
     <h2>TECHNICAL SKILLS</h2>
     <ul>
-      <li>Programming Languages - Python, latex, Assembly Languages(8085,8086,8051).</li>
-      <li>Web Development - IBM DB2, MySQL.</li>
-      <li>Database.</li>
+      <li>Programming Languages - Python, C, latex, Assembly Languages(8085,8086,8051).</li>
+      <li>Web Development.</li>
+      <li>Database - IBM DB2, MySQL.</li>
       <li>Software Knowledge - MS Office, Matlab Simulink.</li>
     </ul>
 
