--- a/About.html
+++ b/About.html
@@ -77,7 +77,7 @@
         <h3>Patient Communication Aid without Sign languages</h3>
       </li>
       <p><em>This project proposes a system for bedridden patients who are unable to speak, where a glove can produce voices corresponding to the normal
-          gestures shown by the patients through a mobile application.</em>
+          gestures shown by the patients through a mobile application.</em></p>
     </ul>
 
     <br>
