--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <a class="about1" href="About.html">About</a>
     <a class="accomplishment" href="Accomplishment.html">Accomplishments</a>
     <h1>I'm Mansoor</h1>
-    <p class="subtitle">Electrical Engineer | Programmer Analyst | Web Developer</p>
+    <p class="subtitle">Electrical Engineer | Programmer Analyst</p>
     <img class="dev" src="images/dev.png" alt="web-image">
   </div>
   <div class="bg">
@@ -27,9 +27,9 @@
       <div class="profile">
         <img class="pp" src="images/me1.png" alt="Mansoor's-Profile-photo">
         <h2 class="hello"><em>Hello...</em></h2>
-        <p class="description">I am a B.Tech Electrical and Electronics Engineering graduate. I have good proficiency in programming languages like Python, C.
+        <p class="description">I am a B.Tech Electrical and Electronics Engineering (Honours) graduate. I have good proficiency in programming languages like Python, C#, C.
           I am really fascinated in IT industry and programming, and I look forward to create a remarkable position in digital world with my knowledge
-          and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em>.</p>
+          and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em> at Cognizant Technology Solutions.</p>
       </div>
       <hr>
       <div class="skills">
