--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
     </div>
     <div class="title">
       <h1>K.U MANSOOR</h1>
-      <p class="title"><em>Electrical and Electronics Engineer.</em><br><em>Programmer Analyst | </em> <span><em>Web Developer</em></span> </p>
+      <p class="title"><em>Electrical and Electronics Engineer.</em><br><em>Programmer Analyst | </em></p>
       <br>
       </p>
     </div>
@@ -39,11 +39,11 @@
       </thead>
       <tbody>
         <tr>
-          <td>B.Tech Electrical and Electronics Engineering</td>
+          <td>B.Tech Electrical and Electronics Engineering (Honours)</td>
           <td>APJ Abdul Kalam Technological University</td>
           <td>Jyothi Engineering College, Thrissur</td>
           <td>2021</td>
-          <td>CGPA: 9</td>
+          <td>CGPA: 8.99</td>
         </tr>
         <tr>
           <td>Intermediate(Plus Two)</td>
@@ -86,7 +86,7 @@
 
     <h2>TECHNICAL SKILLS</h2>
     <ul>
-      <li>Programming Languages - Python, C, latex, Assembly Languages(8085,8086,8051).</li>
+      <li>Programming Languages - Python, C#, C, latex, Assembly Languages(8085,8086,8051).</li>
       <li>Web Development.</li>
       <li>Database - IBM DB2, MySQL.</li>
       <li>Software Knowledge - MS Office, Matlab Simulink.</li>
