--- a/Accomplishment.html
+++ b/Accomplishment.html
@@ -28,7 +28,7 @@
     </div>
     <div class="bottom-container">
       <a class="footer-link" href="https://www.linkedin.com/in/mansoor-k-u-b0aba21b4/">LinkedIn</a>
-      <a class="footer-link" href="https://www.instagram.com/i_am_mr_mansoor/">Instagram</a>
+      <a class="footer-link" href="https://www.instagram.com/mansoor_k_u/">Instagram</a>
       <p class="copyright">© 2021 K.U Mansoor</p>
     </div>
   </body>
