--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
         <h2 class="hello"><em>Hello...</em></h2>
         <p class="description">I am a B.Tech Electrical and Electronics Engineering (Honours) graduate. I have good proficiency in programming languages like Python, C#, C.
           I am really fascinated in IT industry and programming, and I look forward to create a remarkable position in digital world with my knowledge
-          and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em> at Cognizant Technology Solutions.</p>
+          and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em> at <strong>Cognizant Technology Solutions</strong>.</p>
       </div>
       <hr>
       <div class="skills">
