--- a/About.html
+++ b/About.html
@@ -18,7 +18,7 @@
     </div>
     <div class="title">
       <h1>K.U MANSOOR</h1>
-      <p class="title"><em>Electrical and Electronics Engineer.</em><br><em>Programmer Analyst | </em></p>
+      <p class="title"><em>Electrical and Electronics Engineer.</em><br><em>Programmer Analyst</em></p>
       <br>
       </p>
     </div>
