--- a/index.html
+++ b/index.html
@@ -2,7 +2,9 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" name="description" content="This is a personal website of Mansoor.">
+  <meta charset="utf-8" name="description" content="This is the personal website of Mansoor.">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Mansoor K.U</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="icon" href="favicon.ico">
