--- a/About.html
+++ b/About.html
@@ -3,6 +3,8 @@
 
 <head>
   <meta charset="utf-8" name="description" content="Mansoor | Electrical Engineer | Programmer Analyst | Web Developer.">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>About Mansoor</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
