--- a/Accomplishment.html
+++ b/Accomplishment.html
@@ -2,6 +2,8 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8" name="description" content="Mansoor's Accomplishments">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Mansoor's Accomplishments</title>
     <link rel="stylesheet" href="astyle.css">
     <link rel="icon" href="favicon.ico">
