--- a/About.html
+++ b/About.html
@@ -2,9 +2,7 @@
 <html lang="en" dir="ltr">
 
 <head>
-  <meta charset="utf-8" name="description" content="Mansoor | Electrical Engineer | Programmer Analyst | Web Developer.">
-  <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="utf-8" name="description" content="Mansoor | Electrical Engineer | Programmer Analyst">
   <title>About Mansoor</title>
   <link rel="stylesheet" href="style.css">
   <link rel="icon" href="favicon.ico">
