--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <a class="about1" href="About.html">About</a>
     <a class="accomplishment" href="Accomplishment.html">Accomplishments</a>
     <h1>I'm Mansoor</h1>
-    <p class="subtitle">Electrical Engineer | Programmer Analyst</p>
+    <p class="subtitle">Programmer Analyst | Manhattan WMS Consultant</p>
     <img class="dev" src="images/dev.png" alt="web-image">
   </div>
   <div class="bg">
@@ -29,30 +29,26 @@
       <div class="profile">
         <img class="pp" src="images/me1.png" alt="Mansoor's-Profile-photo">
         <h2 class="hello"><em>Hello...</em></h2>
-        <p class="description">I am a B.Tech Electrical and Electronics Engineering (Honours) graduate. I have good proficiency in programming languages like Python, C#, C.
-          I am really fascinated in IT industry and programming, and I look forward to create a remarkable position in digital world with my knowledge
-          and determination. I currently work as a <em><strong>Programmer Analyst Trainee</strong></em> at <strong>Cognizant Technology Solutions</strong>.</p>
+        <p class="description">I am a <em><strong>Supply Chain Analyst</strong></em>, currently working as a <em><strong>Programmer Analyst at Cognizant Technology Solutions</strong></em> in the domain Supply Chain 
+          Execution. I have good proficiency and a delightful experience in Manhattan WMoS and Supply Chain Management.</p>
       </div>
       <hr>
       <div class="skills">
-        <h2><strong>My Skills</strong></h2>
+        <h2><strong>Experience</strong></h2>
         <div class="skill-row">
           <img class="data" src="images/data.png" alt="data-img">
-          <h3>Data Analysis</h3>
-          <p class="data-text">I have good knowldege of data analysis using Python. I'm really interested in data analysis and would like to see me as a Data Scientist
-          sometime in the future.😇</p>
-        </div>
-        <div class="skill-row">
-          <img class="web" src="images/web.png" alt="web-img">
-          <h3>Web Development</h3>
-          <p class="web-text">I builds good looking webpages and websites. I love to build my own webpages. I also have some big plans with web development in the near future.😉</p>
+          <h3>WMS Consultant</h3>
+          <p class="data-text"><ul><li>Techno-Functional Consultant in Manhattan WMOS (2016 version) WM Systems.</li></ul>
+          <li>Knowledge of Manhattan WM for various modules in Inbound, Outbound and Inventory management.</li>
+          <li>Exposure to SAP 7.6, Order Management System (OMS), SCI report tool.</li>
+          <li>Hands-on experience in real-time incident management process using SNOW tool and providing required solutions.</li>
+          <li>Involved in various SDN tests and deployments, configuration changes.</li></p>
         </div>
       </div>
       <hr>
       <div class="contact-me">
         <h2>Get In Touch</h2>
-        <p class="contact"><strong>Want to meet me or be in touch with me?
-        I love to have new friends and my notifications are always on.</strong></p>
+        <p class="contact"><strong>Feel free to connect with me. My notifications are always on...</strong></p>
         <a class="btn" href="mailto:mansoor.rb7@gmail.com">CONTACT ME</a>
       </div>
     </div>
@@ -61,7 +57,7 @@
   <div class="bottom-container">
     <a class="footer-link" href="https://www.linkedin.com/in/mansoor-k-u-b0aba21b4/">LinkedIn</a>
     <a class="footer-link" href="https://www.instagram.com/mansoor_k_u/">Instagram</a>
-    <p class="copyright">© 2021 K.U Mansoor</p>
+    <p class="copyright">© 2022 K.U Mansoor</p>
   </div>
 
 </body>
